{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 147,
  "lineage": "469427d6-8dfa-0518-6c10-e783a687c3dd",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:security-group/sg-09ebec660ee5c71e1",
            "description": "Permite acesso apenas do Orchestrator",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ebec660ee5c71e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091f095a2d8f8b9ca"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "fiapx-project-postgres-sg",
            "name_prefix": "",
            "owner_id": "611937173193",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            },
            "timeouts": null,
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:security-group/sg-091f095a2d8f8b9ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091f095a2d8f8b9ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "fiapx-project-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "611937173193",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            },
            "timeouts": null,
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:611937173193:loadbalancer/net/fiapx-project-nlb/291b89e397799f88",
            "arn_suffix": "net/fiapx-project-nlb/291b89e397799f88",
            "dns_name": "fiapx-project-nlb-291b89e397799f88.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:611937173193:loadbalancer/net/fiapx-project-nlb/291b89e397799f88",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "fiapx-project-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0159f8c013bcbb299"
              },
              {
                "subnet_id": "subnet-07c3facedb8be4d09"
              }
            ],
            "subnets": [
              "subnet-0159f8c013bcbb299",
              "subnet-07c3facedb8be4d09"
            ],
            "tags": {
              "Name": "fiapx-project-nlb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "fiapx-project-nlb",
              "Project": "FIAP-X"
            },
            "vpc_id": "vpc-092aad0954178e8e2",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_subnet.private_1",
            "module.subnets.aws_subnet.private_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:611937173193:listener/net/fiapx-project-nlb/291b89e397799f88/8e63c2648b264805",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:611937173193:targetgroup/fiapx-project-tg/8b60e8a9fd021e29",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:611937173193:listener/net/fiapx-project-nlb/291b89e397799f88/8e63c2648b264805",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:611937173193:loadbalancer/net/fiapx-project-nlb/291b89e397799f88",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb.aws_lb.main",
            "module.nlb.aws_lb_target_group.orchestrator_tg",
            "module.subnets.aws_subnet.private_1",
            "module.subnets.aws_subnet.private_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "orchestrator_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:611937173193:targetgroup/fiapx-project-tg/8b60e8a9fd021e29",
            "arn_suffix": "targetgroup/fiapx-project-tg/8b60e8a9fd021e29",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "3000",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:611937173193:targetgroup/fiapx-project-tg/8b60e8a9fd021e29",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:611937173193:loadbalancer/net/fiapx-project-nlb/291b89e397799f88"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fiapx-project-tg",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092dc749c9e10e15a",
            "arn": "arn:aws:ec2:us-east-1:611937173193:elastic-ip/eipalloc-092dc749c9e10e15a",
            "association_id": "eipassoc-05e7f406291065cb5",
            "domain": "vpc",
            "id": "eipalloc-092dc749c9e10e15a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05522a5e74c5880e2",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-34-237-156-76.compute-1.amazonaws.com",
            "public_ip": "34.237.156.76",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092dc749c9e10e15a",
            "association_id": "eipassoc-05e7f406291065cb5",
            "connectivity_type": "public",
            "id": "nat-0c692e16416356766",
            "network_interface_id": "eni-05522a5e74c5880e2",
            "private_ip": "10.0.1.68",
            "public_ip": "34.237.156.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b356db8906060809",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_eip.nat",
            "module.subnets.aws_subnet.public_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:route-table/rtb-026ac19ae0993d6c9",
            "id": "rtb-026ac19ae0993d6c9",
            "owner_id": "611937173193",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c692e16416356766",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            },
            "timeouts": null,
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_eip.nat",
            "module.subnets.aws_nat_gateway.main",
            "module.subnets.aws_subnet.public_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:route-table/rtb-00fec20a4089383db",
            "id": "rtb-00fec20a4089383db",
            "owner_id": "611937173193",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c916790a0a22c769",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "FIAP-X"
            },
            "timeouts": null,
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8e22ff3f5780270",
            "route_table_id": "rtb-026ac19ae0993d6c9",
            "subnet_id": "subnet-07c3facedb8be4d09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_eip.nat",
            "module.subnets.aws_nat_gateway.main",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_1",
            "module.subnets.aws_subnet.public_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df691be1aa3ec52d",
            "route_table_id": "rtb-026ac19ae0993d6c9",
            "subnet_id": "subnet-0159f8c013bcbb299"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_eip.nat",
            "module.subnets.aws_nat_gateway.main",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_2",
            "module.subnets.aws_subnet.public_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6f979f0721abbdd",
            "route_table_id": "rtb-00fec20a4089383db",
            "subnet_id": "subnet-0b356db8906060809"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public_1",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:subnet/subnet-07c3facedb8be4d09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c3facedb8be4d09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611937173193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fiapx-project-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "fiapx-project-private-1",
              "Project": "FIAP-X"
            },
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:subnet/subnet-0159f8c013bcbb299",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0159f8c013bcbb299",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611937173193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fiapx-project-private-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "fiapx-project-private-2",
              "Project": "FIAP-X"
            },
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:subnet/subnet-0b356db8906060809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b356db8906060809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "611937173193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fiapx-project-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "fiapx-project-public-1",
              "Project": "FIAP-X"
            },
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:internet-gateway/igw-0c916790a0a22c769",
            "id": "igw-0c916790a0a22c769",
            "owner_id": "611937173193",
            "tags": {
              "Name": "fiapx-project-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "fiapx-project-igw",
              "Project": "FIAP-X"
            },
            "vpc_id": "vpc-092aad0954178e8e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:611937173193:vpc/vpc-092aad0954178e8e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2e8bf4c52aecb59",
            "default_route_table_id": "rtb-011cc25cf3e5d5c5a",
            "default_security_group_id": "sg-0919b2da2995ce15f",
            "dhcp_options_id": "dopt-0570db736040c09ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092aad0954178e8e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011cc25cf3e5d5c5a",
            "owner_id": "611937173193",
            "tags": {
              "Name": "fiapx-project-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "fiapx-project-vpc",
              "Project": "FIAP-X"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}